Added tests for a wide coverage